/cp 2009-09-09  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/28293
	* decl2.c (grokfield): Check for explicit template argument lists.

/testsuite
2009-09-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/28293
	* g++.dg/template/crash91.C: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@151581 138bc75d-0d04-0410-961f-82ee72b054a4